--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="model"
+            type="io.github.artenes.clucko.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,6 +36,43 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtBalance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txtLeft"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rvClockIns"
+            tools:text="07:00"/>
+
+        <TextView
+            android:id="@+id/txtLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:15"
+            app:layout_constraintBottom_toBottomOf="@+id/txtBalance"
+            app:layout_constraintEnd_toStartOf="@+id/fabClockIn"
+            app:layout_constraintStart_toEndOf="@+id/txtBalance"
+            app:layout_constraintTop_toTopOf="@+id/txtBalance"
+            tools:text="00:15" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Balance"
+            app:layout_constraintBottom_toTopOf="@+id/txtBalance"
+            app:layout_constraintEnd_toEndOf="@+id/txtBalance"
+            app:layout_constraintStart_toStartOf="@+id/txtBalance" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Left"
+            app:layout_constraintBottom_toTopOf="@+id/txtLeft"
+            app:layout_constraintEnd_toEndOf="@+id/txtLeft"
+            app:layout_constraintStart_toStartOf="@+id/txtLeft" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
