--- a/app/src/main/res/layout/activity_edit_clock_in.xml
+++ b/app/src/main/res/layout/activity_edit_clock_in.xml
@@ -19,6 +19,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/buttonSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Save"
+            app:layout_constraintEnd_toEndOf="@+id/editTime"
+            app:layout_constraintStart_toStartOf="@+id/editTime"
+            app:layout_constraintTop_toBottomOf="@+id/editTime" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
