--- a/app/src/main/res/layout/clockin_item.xml
+++ b/app/src/main/res/layout/clockin_item.xml
@@ -25,12 +25,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:fontFamily="@font/roboto"
+            android:text="@{clockIn}"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageClockInIcon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="@{clockIn}"
             tools:text="13:40" />
 
         <ImageView
