--- a/app/src/main/res/layout/clockin_item.xml
+++ b/app/src/main/res/layout/clockin_item.xml
@@ -25,6 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:fontFamily="@font/roboto_thin"
             android:text="@{clockIn}"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
