--- a/app/src/main/res/layout/fragment_clock_in_list.xml
+++ b/app/src/main/res/layout/fragment_clock_in_list.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
+            android:fontFamily="@font/raleway"
             android:textAppearance="?attr/textAppearanceHeadline5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -40,6 +41,7 @@
             android:id="@+id/txtBalance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/raleway"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txtLeft"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +52,7 @@
             android:id="@+id/txtLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/raleway"
             android:text="00:15"
             app:layout_constraintBottom_toBottomOf="@+id/txtBalance"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +63,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/raleway_semibold"
             android:text="Balance"
             app:layout_constraintBottom_toTopOf="@+id/txtBalance"
             app:layout_constraintEnd_toEndOf="@+id/txtBalance"
@@ -68,6 +72,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/raleway_semibold"
             android:text="Left"
             app:layout_constraintBottom_toTopOf="@+id/txtLeft"
             app:layout_constraintEnd_toEndOf="@+id/txtLeft"
