--- a/app/src/main/res/layout/activity_edit_clock_in.xml
+++ b/app/src/main/res/layout/activity_edit_clock_in.xml
@@ -29,6 +29,15 @@
             app:layout_constraintStart_toStartOf="@+id/editTime"
             app:layout_constraintTop_toBottomOf="@+id/editTime" />
 
+        <NumberPicker
+            android:id="@+id/pickerHour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/editTime"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
