Increase number picker and button sizes for edit

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,6 +22,8 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
-
+    <style name="NumberPickerText">
+        <item name="android:textSize">25sp</item>
+    </style>
 
 </resources>
