Change icons for in, out and create clock in

--- a/app/src/main/res/layout/clockin_item.xml
+++ b/app/src/main/res/layout/clockin_item.xml
@@ -44,7 +44,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textClockIn"
             app:layout_constraintTop_toTopOf="@+id/textClockIn"
-            android:src="@{isIn ? @android:drawable/arrow_down_float : @android:drawable/arrow_up_float}" />
+            android:src="@{isIn ? @drawable/icon_clock_in : @drawable/icon_clock_out}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
