--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@android:drawable/btn_star_big_on"
+            app:srcCompat="@drawable/icon_finger"
             android:importantForAccessibility="no"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
