--- a/app/src/main/res/layout/activity_edit_clock_in.xml
+++ b/app/src/main/res/layout/activity_edit_clock_in.xml
@@ -6,7 +6,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".EditClockInActivity">
+        tools:context=".EditClockInActivity"
+        android:background="?attr/colorPrimaryVariant">
 
         <Button
             android:id="@+id/buttonSave"
