--- a/app/src/main/res/layout/activity_edit_hours_per_day.xml
+++ b/app/src/main/res/layout/activity_edit_hours_per_day.xml
@@ -9,6 +9,18 @@
         tools:context=".EditHoursPerDayActivity"
         android:background="?attr/colorPrimaryVariant">
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Daily workload"
+            android:textAppearance="?attr/textAppearanceHeadline4"
+            android:fontFamily="@font/raleway"
+            app:layout_constraintBottom_toTopOf="@+id/pickerHour"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <NumberPicker
             android:id="@+id/pickerHour"
             android:layout_width="0dp"
@@ -44,6 +56,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
