--- a/app/src/main/res/layout/activity_edit_current_day.xml
+++ b/app/src/main/res/layout/activity_edit_current_day.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/raleway"
-            android:text="Display Date"
+            android:text="Current Date"
             android:textAppearance="?attr/textAppearanceHeadline4"
             app:layout_constraintBottom_toTopOf="@+id/pickerMonth"
             app:layout_constraintEnd_toEndOf="parent"
