Adds translation to portuguese

--- a/app/src/main/res/layout/activity_edit_hours_per_day.xml
+++ b/app/src/main/res/layout/activity_edit_hours_per_day.xml
@@ -13,7 +13,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Daily workload"
+            android:text="@string/daily_workload"
             android:textAppearance="?attr/textAppearanceHeadline4"
             android:fontFamily="@font/raleway"
             app:layout_constraintBottom_toTopOf="@+id/pickerHour"
@@ -51,7 +51,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
-            android:text="Save"
+            android:text="@string/save"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
