--- a/app/src/main/res/layout/layout_empty_list.xml
+++ b/app/src/main/res/layout/layout_empty_list.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="No work today"
+        android:text="@string/no_work_today"
         android:textAppearance="?attr/textAppearanceHeadline4"
         android:fontFamily="@font/raleway"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Register a clock in to start your working day."
+        android:text="@string/register_a_clock_in_to_start_your_working_day"
         android:fontFamily="@font/raleway"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
