Organize project in packages

--- a/app/src/main/res/layout/fragment_clock_in_list.xml
+++ b/app/src/main/res/layout/fragment_clock_in_list.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="model"
-            type="io.github.artenes.clucko.MainViewModel" />
+            type="io.github.artenes.clucko.viewmodels.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
