--- a/app/src/main/res/layout/activity_edit_current_day.xml
+++ b/app/src/main/res/layout/activity_edit_current_day.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/colorPrimaryVariant"
-        tools:context=".EditCurrentDayActivity">
+        tools:context=".views.EditCurrentDayActivity">
 
         <TextView
             android:id="@+id/textView3"
