--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     <data>
         <variable
             name="model"
-            type="io.github.artenes.clucko.MainViewModel" />
+            type="io.github.artenes.clucko.viewmodels.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
+        tools:context=".views.MainActivity"
         android:background="?attr/colorPrimaryVariant">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -30,7 +30,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainerView3"
-            android:name="io.github.artenes.clucko.ClockInListFragment"
+            android:name="io.github.artenes.clucko.views.ClockInListFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
